# perfembd

./: Cargo.toml  README.md  corpus.txt
.github/workflows/: build.yml
src/: main.rs
