[package]
name = "perfembd"
version = "0.4.2"
edition = "2021"

[dependencies]
thiserror = "2.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
rand = "0.9"

[profile.release]
opt-level = 3
debug = false
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1
rpath = false
